--- a/packages/screen-time-hashed/package.json
+++ b/packages/screen-time-hashed/package.json
@@ -17,15 +17,18 @@
 	"exports": "./src/index.ts",
 	"scripts": {
 		"build": "node-ts ./scripts/build.ts",
-		"start": "node-ts ./src/index.ts"
+		"start": "node-ts ./src/bin/change-screen-time-passcode.ts"
 	},
 	"devDependencies": {
+		"@types/inquirer": "^9.0.1",
 		"execa": "^6.1.0",
 		"vitest": "latest"
 	},
 	"dependencies": {
+		"@hashed-out/hasher": "workspace:*",
 		"applescript-utils": "^0.1.20",
 		"fast-sha256": "^1.3.0",
-		"@hashed-out/hasher": "workspace:*"
+		"inquirer": "^9.1.1",
+		"inquirer-press-to-continue": "^1.1.4"
 	}
 }
